test kaji commit

--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -27,6 +27,7 @@
         <module>../core</module>
         <module>../generaldao</module>
         <module>../questionnaire</module>
+        <module>../notification</module>
     </modules>
 
 </project>
